# mcptrust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINER_VERIFICATION.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_GUARANTEES.md  go.mod  go.sum
.github/workflows/: action-selftest.yml  ci.yml  mcptrust.yml.example  runner-realworld.yml  sign.yml.example  verify.yml.example
adapters/python/: README.md
adapters/python/crewai_mcptrust/: README.md  pyproject.toml
adapters/python/crewai_mcptrust/src/crewai_mcptrust/: __init__.py  guard.py  hooks.py
adapters/python/crewai_mcptrust/tests/: __init__.py  test_guard.py  test_hooks.py
adapters/python/mcptrust_core/: README.md  pyproject.toml
adapters/python/mcptrust_core/src/mcptrust_core/: __init__.py  cli.py  errors.py  types.py
adapters/python/mcptrust_core/tests/: test_cli.py  test_errors.py
cmd/mcptrust/: main.go
docs/: ARCHITECTURE.md  CLAUDE_CODE.md  CLI.md  EXIT_CODES.md  INTEGRATIONS.md  LANGCHAIN.md  LOGGING.md  MIGRATION.md  POLICY.md  REPRODUCIBILITY.md  SECURITY_MODEL.md  SIGSTORE.md  THREAT_MODEL.md  github-action.md  observability-otel.md  policy-explain.md
docs/compliance/: eu-ai-act.md  iso-42001.md  nist-rmf.md
examples/: README.md  demo_supply_chain.sh  policy.baseline.yaml  policy.basic.yaml  policy.strict.yaml
examples/github-actions/: lock-and-check.yml  mcptrust-strict.yml  mcptrust.yml  minimal-check.yml  minimal-lock.yml
internal/artifact/: npm.go  pin.go  provenance_npm.go  provenance_npm_test.go  provenance_oci.go  resolver.go  resolver_test.go
internal/bundler/: manifest.go  writer.go  writer_test.go
internal/cli/: artifact.go  bundle.go  check.go  check_output.go  check_output_test.go  diff.go  keys.go  keys_test.go  lock.go  policy.go  policy_explain.go  policy_explain_test.go  proxy.go  root.go  run.go  scan.go
internal/crypto/: backward_compat_test.go  signature.go  signature_test.go  signer.go
internal/differ/: engine.go  severity_string.go  severity_string_test.go  translator.go  v3.go  v3_test.go
internal/locker/: builder_v3.go  builder_v3_test.go  canonical.go  canonical_test.go  hasher.go  hasher_v3.go  hasher_v3_test.go  manager.go  manager_test.go
internal/models/: lockfile.go  lockfile_v3.go  policy.go  report.go
internal/netutil/: tarball.go  tarball_test.go
internal/observability/: context.go
internal/policy/: embed_presets_test.go  engine.go  engine_test.go  parse_test.go  policy_input.go  presets.go
internal/proxy/: bridge.go  canonical.go  (+11 more)
scripts/: smoke.sh
tests/: README.md  gauntlet.sh
(+77 files in other folders)
