[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-mcptrust"
version = "0.1.0"
description = "CrewAI integration for MCPTrust trust enforcement"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MCPTrust Contributors" }
]
keywords = ["mcptrust", "mcp", "crewai", "security", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcptrust-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mcptrust/mcptrust"
Repository = "https://github.com/mcptrust/mcptrust"
Documentation = "https://github.com/mcptrust/mcptrust/tree/main/adapters/python/crewai_mcptrust"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_mcptrust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
