[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcptrust-core"
version = "0.1.0"
description = "Python wrapper for the mcptrust CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MCPTrust Contributors" }
]
keywords = ["mcptrust", "mcp", "security", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mcptrust/mcptrust"
Repository = "https://github.com/mcptrust/mcptrust"
Documentation = "https://github.com/mcptrust/mcptrust/tree/main/adapters/python/mcptrust_core"

[tool.hatch.build.targets.wheel]
packages = ["src/mcptrust_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
